tests/ui/single-use-lifetime/issue-117965.stderr
error: lifetime parameter `'b` only used once
  --> $DIR/issue-117965.rs:9:16
   |
LL |     pub fn get<'b: 'a>(&'b self) -> &'a str {
   |                ^^       -- ...is used only here
   |                |
   |                this lifetime...
   |
note: the lint level is defined here
  --> $DIR/issue-117965.rs:1:9
   |
LL | #![deny(single_use_lifetimes)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

